Adds code for first working state of the printbot

--- a/src/main/resources/de.properties
+++ b/src/main/resources/de.properties
@@ -1,5 +1,8 @@
-unknownCommand=\u2757Der Befehl ist unbekannt
-help=Sende dem Bot einfach Befehle\nUnd ganz viele Kekse
-printEnabled=Sende mir jetzt eine PDF zum Drucken
-printCancel=Drucken abgebrochen. Sende /printPDF um einen neuen Druckvorgang zu starten.
-printCancelNoJob=Kein Druckvorgang der abgebrochen werden kann
+unknown.command=\u2757Der Befehl ist unbekannt
+help=Sende dem Bot einfach Befehle\nUnd ganz viele Kekse\nFolgende Befehle werden akzeptiert:\n- /help Um Hilfe zu erhalten\n- /printpdf Um eine PDF-Datei zu drucken\n- /cancel Um einen Druckvorgang abzubrechen
+print.enabled=Sende mir jetzt eine PDF zum Drucken
+print.cancel=Drucken abgebrochen. Sende /printPDF um einen neuen Druckvorgang zu starten.
+print.cancel.no.job=Kein Druckvorgang der abgebrochen werden kann
+illegal.file.type=Die Datei entspricht nicht dem geforderten Dateityp
+print.success=Das Dokument wurde erfolgreich gedruckt
+print.fail=Beim Drucken ist ein Fehler aufgetreten 
