--- a/src/main/resources/en.properties
+++ b/src/main/resources/en.properties
@@ -1,5 +1,8 @@
-unknownCommand=\u2757Unknown Command
+unknown.command=\u2757Unknown Command
 help=Send some commands\nand cookies
-printEnabled=Send PDF to print
-printCancel=Printing canceled
-printCancelNoJob=No print to cancel
+print.enabled=Send PDF to print
+print.cancel=Printing canceled
+print.cancel.no.job=No print to cancel
+illegal.file.type=The given file does not match the needed file type
+print.success=Successfully printed
+print.fail=Printingfailed 
