Implement printer selection feature
The printbot is now capable of working with multiple printers. After sending the /printpdf command, the user can decide which printer to use.

Other changes:
- Cleaner code
- Better tests
- Optimized design for better testability
- Several version-updates of dependencies

--- a/src/main/resources/bot_example.properties
+++ b/src/main/resources/bot_example.properties
@@ -1,3 +1,5 @@
 token=<your bot token>
-printerName=<Your printers name in the system>
+# multiprinterSeperator is only needed, when you try to use more than one printer
+multiPrinterSeparator=,
+printerName=<Your first printers name in the system>,<Your second printers name in the system>
 langFile=<de.properties, en.properties>
