--- a/src/main/resources/de.properties
+++ b/src/main/resources/de.properties
@@ -1,8 +1,11 @@
 unknown.command=\u2757Der Befehl ist unbekannt
 help=Sende dem Bot einfach Befehle\nUnd ganz viele Kekse\nFolgende Befehle werden akzeptiert:\n- /help Um Hilfe zu erhalten\n- /printpdf Um eine PDF-Datei zu drucken\n- /cancel Um einen Druckvorgang abzubrechen
 print.enabled=Sende mir jetzt eine PDF zum Drucken
-print.cancel=Drucken abgebrochen. Sende /printPDF um einen neuen Druckvorgang zu starten.
+print.cancel=Drucken abgebrochen. Sende /printpdf um einen neuen Druckvorgang zu starten.
 print.cancel.no.job=Kein Druckvorgang der abgebrochen werden kann
 illegal.file.type=Die Datei entspricht nicht dem geforderten Dateityp
 print.success=Das Dokument wurde erfolgreich gedruckt
-print.fail=Beim Drucken ist ein Fehler aufgetreten 
+print.fail=Beim Drucken ist ein Fehler aufgetreten
+print.another=Ein anderer Druckauftrag läuft bereits. Nutze /cancel um den laufenden Druckauftrag zu beenden
+print.printer.selected=Du hast den Drucker "{0}" gewählt
+print.printer.select=Wähle einen Drucker
