--- a/src/main/resources/en.properties
+++ b/src/main/resources/en.properties
@@ -5,4 +5,7 @@ print.cancel=Printing canceled
 print.cancel.no.job=No print to cancel
 illegal.file.type=The given file does not match the needed file type
 print.success=Successfully printed
-print.fail=Printingfailed 
+print.fail=Printing failed
+print.another=Another printingjob is currently running. Use /cancel to end the running one
+print.printer.selected=You selected "{0}" as your printer
+print.printer.select=Please select a printer
